--- a/flutter_application_1/web/index.html
+++ b/flutter_application_1/web/index.html
@@ -38,6 +38,15 @@
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+  <script>
+    var dartPdfJsVersion = "3.2.146";
+  </script>
+  <script>
+    var dartPdfJsBaseUrl = "https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.2.146/";
+  </script>
+<script>
+  var dartPdfJsBaseUrl = "assets/js/pdf/3.2.146/";
+</script>  
 </head>
 <body>
   <script>
